[gd_scene load_steps=29 format=3 uid="uid://fpd45endcam8"]

[ext_resource type="Script" path="res://Scenes/PC/desktop.gd" id="1_fpvgn"]
[ext_resource type="Texture2D" uid="uid://dxlygue35lt7e" path="res://Assets/PC/Background.png" id="2_sjacn"]
[ext_resource type="FontFile" uid="uid://jnk3hrmjl2tl" path="res://Assets/PC/Font.tres" id="3_bds3p"]
[ext_resource type="Texture2D" uid="uid://bg241wt1xpfoy" path="res://Assets/PC/PatchRegular.png" id="4_x3l3k"]
[ext_resource type="Texture2D" uid="uid://cggbubid3xpv3" path="res://Assets/PC/Flag.png" id="5_pf22g"]
[ext_resource type="Texture2D" uid="uid://biaakur0vk206" path="res://Assets/PC/PatchInverted.png" id="6_vy8kg"]
[ext_resource type="Texture2D" uid="uid://by0n1lipoxrgg" path="res://Assets/PC_Icons/email_icon.png" id="7_au0s1"]
[ext_resource type="Texture2D" uid="uid://cukq4pbkpfaeu" path="res://Assets/PC_Icons/email_icon_hover.png" id="8_g7yxx"]
[ext_resource type="Script" path="res://Scenes/PC/email_window.gd" id="9_t80sg"]
[ext_resource type="Texture2D" uid="uid://dc1wtcunosk24" path="res://Assets/PC/Inbox/inbox_bg.png" id="9_ye6vf"]
[ext_resource type="Texture2D" uid="uid://olhnssr8hema" path="res://Assets/PC/Inbox/inbox_spam_button.png" id="11_ew15b"]
[ext_resource type="Texture2D" uid="uid://dsuttevjk16cv" path="res://Assets/PC/Inbox/inbox_safe_button.png" id="12_4l3dx"]
[ext_resource type="Texture2D" uid="uid://bighjf2cmn5ni" path="res://Assets/PC/Inbox/CloseRegular.png" id="13_i6xna"]
[ext_resource type="Texture2D" uid="uid://b5cfu1aoluxr5" path="res://Assets/PC/Inbox/ClosePressed.png" id="14_cc121"]
[ext_resource type="Texture2D" uid="uid://cjb0m5ybuts1m" path="res://Assets/PC_Icons/recycle-bin.png" id="14_l5el1"]
[ext_resource type="Texture2D" uid="uid://c8fjc1x0g65j8" path="res://Assets/PC_Icons/recycle-bin-hover.png" id="15_qmbuh"]
[ext_resource type="Texture2D" uid="uid://cdm7nbgyt3nem" path="res://Assets/PC_Icons/internet.png" id="16_78tt6"]
[ext_resource type="Texture2D" uid="uid://cq7hwset4ici1" path="res://Assets/PC_Icons/internet-hover.png" id="17_jpd6t"]
[ext_resource type="Texture2D" uid="uid://cms3rgup6net1" path="res://Assets/PC_Icons/files.png" id="18_ff4oh"]
[ext_resource type="Texture2D" uid="uid://b0s104ttjaxrr" path="res://Assets/PC_Icons/files-hover.png" id="19_pudg6"]

[sub_resource type="Shader" id="Shader_8n3nc"]
code = "shader_type canvas_item;

uniform float SCREEN_HEIGHT = 240.0;

void fragment() {
	int y_pixel = int(UV.y * SCREEN_HEIGHT);
	if (y_pixel % 2 == 0) {
		COLOR.a = 0.0;
	} else {
		COLOR.a = 0.05;
	}
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wpxuc"]
shader = SubResource("Shader_8n3nc")
shader_parameter/SCREEN_HEIGHT = 240.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pk1ya"]
bg_color = Color(0.764706, 0.764706, 0.764706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rp51n"]
draw_center = false
border_width_top = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_dmx1n"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ua3ah"]
texture = ExtResource("4_x3l3k")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_akxd1"]
texture = ExtResource("6_vy8kg")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0
region_rect = Rect2(0, 0, 16, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rmq8t"]
texture = ExtResource("9_ye6vf")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[node name="Desktop" type="Node2D"]
script = ExtResource("1_fpvgn")

[node name="Background" type="Sprite2D" parent="."]
z_index = 3
texture_filter = 1
position = Vector2(574, 322)
texture = ExtResource("2_sjacn")

[node name="Control" type="Control" parent="."]
z_index = 2
texture_filter = 1
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 337.0
offset_top = 88.0
offset_right = 809.0
offset_bottom = 437.0
grow_horizontal = 0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.501961, 0.501961, 1)

[node name="ScanLines" type="ColorRect" parent="Control"]
material = SubResource("ShaderMaterial_wpxuc")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 2.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="Taskbar" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -47.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1, 0.64)
theme_override_styles/panel = SubResource("StyleBoxFlat_pk1ya")

[node name="Line" type="Panel" parent="Control/Taskbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rp51n")

[node name="StartButton" type="Button" parent="Control/Taskbar"]
texture_filter = 1
layout_mode = 0
offset_left = 3.0
offset_top = 7.0
offset_right = 142.0
offset_bottom = 68.0
scale = Vector2(0.68, 0.9075)
theme = SubResource("Theme_dmx1n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_bds3p")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_ua3ah")
text = "Logout"
icon = ExtResource("5_pf22g")
expand_icon = true

[node name="Time" type="Panel" parent="Control/Taskbar"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -65.0
offset_top = 4.0
offset_right = 31.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.64, 0.9375)
theme_override_styles/panel = SubResource("StyleBoxTexture_akxd1")

[node name="Label" type="Label" parent="Control/Taskbar/Time"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "12:30 PM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EmailAppButton" type="VBoxContainer" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = 19.0
offset_top = 11.0
offset_right = 83.0
offset_bottom = 102.0
scale = Vector2(0.52, 0.48)
alignment = 1

[node name="TextureButton" type="TextureButton" parent="Control/EmailAppButton"]
layout_mode = 2
texture_normal = ExtResource("7_au0s1")
texture_pressed = ExtResource("7_au0s1")
texture_hover = ExtResource("8_g7yxx")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/EmailAppButton"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "E-mail"
horizontal_alignment = 1

[node name="EmailAppWindow" type="Panel" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -135.0
offset_right = 619.0
offset_bottom = 347.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.44, 0.48)
theme_override_styles/panel = SubResource("StyleBoxTexture_rmq8t")
script = ExtResource("9_t80sg")

[node name="EmailAppWindowContainer" type="VBoxContainer" parent="Control/EmailAppWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.4546
offset_top = 42.7083
offset_right = -34.5454
offset_bottom = 29.7083
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 90

[node name="EmailContainer" type="VBoxContainer" parent="Control/EmailAppWindow/EmailAppWindowContainer"]
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="Control/EmailAppWindow/EmailAppWindowContainer/EmailContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Title"
fit_content = true

[node name="Sender" type="RichTextLabel" parent="Control/EmailAppWindow/EmailAppWindowContainer/EmailContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Sender"
fit_content = true

[node name="Body" type="RichTextLabel" parent="Control/EmailAppWindow/EmailAppWindowContainer/EmailContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "BodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyB odyBody BodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBo
dyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBodyBody"
fit_content = true

[node name="ButtonContainer" type="HBoxContainer" parent="Control/EmailAppWindow/EmailAppWindowContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="SpamContainer" type="VBoxContainer" parent="Control/EmailAppWindow/EmailAppWindowContainer/ButtonContainer"]
layout_mode = 2

[node name="FlagSpam" type="TextureButton" parent="Control/EmailAppWindow/EmailAppWindowContainer/ButtonContainer/SpamContainer"]
layout_mode = 2
texture_normal = ExtResource("11_ew15b")
texture_pressed = ExtResource("11_ew15b")
texture_hover = ExtResource("11_ew15b")

[node name="SafeContainer" type="VBoxContainer" parent="Control/EmailAppWindow/EmailAppWindowContainer/ButtonContainer"]
layout_mode = 2

[node name="MarkSafe" type="TextureButton" parent="Control/EmailAppWindow/EmailAppWindowContainer/ButtonContainer/SafeContainer"]
layout_mode = 2
texture_normal = ExtResource("12_4l3dx")
texture_pressed = ExtResource("12_4l3dx")
texture_hover = ExtResource("12_4l3dx")

[node name="CloseButton" type="TextureButton" parent="Control/EmailAppWindow"]
layout_mode = 0
offset_left = 750.0
offset_top = 1.04166
offset_right = 790.0
offset_bottom = 41.0417
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("13_i6xna")
texture_pressed = ExtResource("14_cc121")
stretch_mode = 5

[node name="RecycleButton" type="VBoxContainer" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.907
anchor_top = 0.724
anchor_right = 0.988
anchor_bottom = 0.886
offset_left = -25.104
offset_top = -3.67599
offset_right = 45.664
offset_bottom = 35.786
scale = Vector2(0.567568, 0.52)
alignment = 1

[node name="TextureButton" type="TextureButton" parent="Control/RecycleButton"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("14_l5el1")
texture_pressed = ExtResource("14_l5el1")
texture_hover = ExtResource("15_qmbuh")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/RecycleButton"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Recycle Bin"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InternetButton" type="VBoxContainer" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
offset_left = 14.0
offset_top = 62.0
offset_right = 101.0
offset_bottom = 153.0
scale = Vector2(0.56, 0.52)
alignment = 1

[node name="TextureButton" type="TextureButton" parent="Control/InternetButton"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("16_78tt6")
texture_pressed = ExtResource("16_78tt6")
texture_hover = ExtResource("17_jpd6t")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/InternetButton"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Internet"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FilesButton" type="VBoxContainer" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
offset_left = 18.0
offset_top = 119.0
offset_right = 105.0
offset_bottom = 210.0
scale = Vector2(0.462857, 0.4)
alignment = 1

[node name="TextureButton" type="TextureButton" parent="Control/FilesButton"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("18_ff4oh")
texture_pressed = ExtResource("18_ff4oh")
texture_hover = ExtResource("19_pudg6")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/FilesButton"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Files"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EntranceMarkers" type="Node2D" parent="."]

[node name="any" type="Marker2D" parent="EntranceMarkers"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(572, 321)
